# isaac_drone_racer

./: .gitignore  README.md  extension.toml  pyproject.toml  setup.py  setup.sh
.github/: LICENSE_HEADER.txt
assets/: cf2x.py  five_in_drone.py  hangar_concrete_floor_4k.blend
assets/gate/: Gate_2.usd
autonomy_msgs/src/autonomy_msgs/: CMakeLists.txt  package.xml
autonomy_msgs/src/autonomy_msgs/msg/: DroneState.msg  GateDetection.msg
dynamics/: __init__.py  allocation.py  attitude_controller.py  motor.py  rate_controller.py
scripts/: inference.py  test.py
scripts/rl/: play.py  play_ros.py  play_ros_bare.py  play_ros_bare_msgs.py  play_ros_bridge.py  play_ros_bridge_rc_only.py  train.py
scripts/rl/rsl_rl/: cli_args.py  play.py  train.py
scripts/rl/skrl/: play.py  train.py
tasks/: __init__.py
tasks/drone_racer/: __init__.py  drone_racer_a2rl_cfg.py  drone_racer_a2rl_cfg_2.py  drone_racer_a2rl_cfg_cam.py  drone_racer_a2rl_cfg_full.py  drone_racer_a2rl_cfg_loop.py  drone_racer_env_cfg.py  track_generator.py
tasks/drone_racer/agents/: rsl_rl_cfg.py
tasks/drone_racer/mdp/: __init__.py  actions.py  commands.py  events.py  observations.py  rewards.py  terminations.py
tests/: test_dynamics.py
utils/: __init__.py  logger.py  plotter.py
